--- a/src/CloudJavaSample.properties
+++ b/src/CloudJavaSample.properties
@@ -2,10 +2,10 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
   <!-- Integration Class -->
-  <entry key="appId"></entry>
+  <entry key="appId">RHKUW6KICI</entry>
   <!-- Example: <entry key="appId">3adge2HRT</entry> -->
 
-  <entry key="secretKey"></entry>
+  <entry key="secretKey">dSGeyRNLAMxSL5csjpuvVXJJ5UHl5rc8IPHRd3as</entry>
   <!-- Example: <entry key="secretKey">3bdf56o8AOF7qsP0649KfLyXOlfgyxyyt7ecd2U</entry>-->
   
   <entry key="serviceUrl">http://cloud.scorm.com/EngineWebServices/</entry>
